--- a/src/components/lumo/lumo.module.css
+++ b/src/components/lumo/lumo.module.css
@@ -299,6 +299,7 @@
     text-decoration: none;
     position: relative;
     overflow: hidden;
+    isolation: isolate;
     display: inline-flex;
     align-items: center;
     justify-content: center;
